--- a/vendas.html
+++ b/vendas.html
@@ -10,6 +10,7 @@
     <h1>
         página de vendas
     </h1>
+    <p>vendas = R$ 5.000,00</p>
     <a href="index.html">voltar para a página inicial</a>
 </body>
 </html>
